--- a/MazeSolution.ipynb
+++ b/MazeSolution.ipynb
@@ -45,8 +45,8 @@
       },
       "source": [
         "Daniel Zubieta Ambriz A01651206 https://github.com/Dazuam/SistemasInteligentes\n",
-        "<br>Carlos Aguirre Orozco A01336319\n",
-        "<br>Axel Octavio Meinguer Estrada A01653448\n",
+        "<br>Carlos Aguirre Orozco A01336319 https://github.com/Lucer9/Sistemas-\n",
+        "<br>Axel Octavio Meinguer Estrada A01653448 https://github.com/alupusmc/SistemasInteligentes\n",
         "<br>Alister Estrada Cueto A01336767\n",
         "\n",
         "---\n",
@@ -65,14 +65,12 @@
         "colab": {}
       },
       "source": [
-        "\n",
-        "\n",
         "import heapq\n",
         "import cv2\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np"
       ],
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -105,7 +103,7 @@
         "        self.index_in_queue=None\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -115,7 +113,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Esta funcion recibe una matriz, la fila y la columna. Empieza creando un arreglo vacio para \"pushear\" los vecinos adjacentes. Primero checa si no son las orillas o paredes, si no lo son agrega ese lugar de la matriz a la lista de vecinos. Al final regresa los vecinos."
+        "Esta funcion recibe una matriz, la fila y la columna. Empieza creando un arreglo vacio para \"*pushear*\" los vecinos adjacentes. Primero checa si no son las orillas o paredes, si no lo son agrega ese lugar de la matriz a la lista de vecinos. Al final regresa los vecinos."
       ]
     },
     {
@@ -141,7 +139,7 @@
         "            neighbors.append(mat[r][c+1])\n",
         "    return neighbors\n"
       ],
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -151,7 +149,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Aqui se hace una \"busqueda\" apartir de la queue para obtener un padre que este mas cercano, esto se hace partiendo en mitades, parecido a una busqueda binaria, esto se hace de manera recursiva ya que esto se regresa hasta llegar al primer elemento del queue"
+        "Aqui se hace una \"busqueda\" apartir de la queue para mover el indice al padre que este mas cercano, esto se hace partiendo en mitades, parecido a una busqueda binaria, esto se hace de manera recursiva ya que esto se regresa hasta llegar al primer elemento del queue"
       ]
     },
     {
@@ -174,7 +172,7 @@
         "    return queue\n",
         "    \n"
       ],
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -184,7 +182,8 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "\n",
+        "Aqui se define el *child* izquierdo y derecho, este codigo se detiene una vez que se llega a la longitud del *queue*. Se revisa si el lado izq es menorr que la longitud y si el derecho es mayor, se checa de nuevo si la distancia del vertice en cuestion es mayor a la del izquierdo si esto es correcto: se\n"
       ]
     },
     {
@@ -216,24 +215,45 @@
         "            queue[index].index_in_queue=index\n",
         "            queue[small].index_in_queue=small\n",
         "            queue = bubble_down(queue, small)\n",
-        "    return queue\n"
+        "    return queue"
       ],
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "87G7iVeog8W_",
+        "colab_type": "text"
+      },
+      "source": [
+        "Es una funcion que recibe coordenadas que representan la imagen en un array \"img\", por otro lado recibe las coordenadas u, v las cuales son la posicion actual, de esta forma se hace un calculo matematico donde se determina la distancia de un punto dado a otro por punto 0 \"img[0]\" comparado con punto 1 \"img[1]\" y punto 2 \"img[2]\"\n"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DF1-rq9dPWEw",
+        "id": "GNi4hdLZg75L",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
+        "\n",
         "def get_distance(img,u,v):\n",
-        "    return 0.1 + (float(img[v][0])-float(img[u][0]))**2+(float(img[v][1])-float(img[u][1]))**2+(float(img[v][2])-float(img[u][2]))**2\n"
+        "    return 0.1 + (float(img[v][0])-float(img[u][0]))**2+(float(img[v][1])-float(img[u][1]))**2+(float(img[v][2])-float(img[u][2]))**2"
       ],
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MVuv9lPPX_sf",
+        "colab_type": "text"
+      },
+      "source": [
+        "Aqui ya se dibuja el path que se encontro en find_shortest_path, el camino mas corto"
+      ]
     },
     {
       "cell_type": "code",
@@ -251,8 +271,24 @@
         "        cv2.line(img,(x0,y0),(x1,y1),(255,0,0),thickness)\n",
         "        x0,y0=vertex"
       ],
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5uSJ-_ynYA26",
+        "colab_type": "text"
+      },
+      "source": [
+        "Aqui es donde empieza lo bueno, se eligen las coordenadas del destino y del inicio, apartir de los pixeles de las coordenadas de la imagen. Despues se hace un for para definir los puntos de la imagen.\n",
+        "\n",
+        "<br>\n",
+        "Se hace un bubble up para empezar apartir del source, y generar la lista de puntos dibujar ahi.\n",
+        "<br>\n",
+        "<br>\n",
+        "Se procede a visitar los puntos apartir del indice 0, que es el source point, se saca este primer punto, se procede a obtener los vecinos adyacentes de este punto para poder determinar el mas cercano e irlos poniendo en la linea a dibujar."
+      ]
     },
     {
       "cell_type": "code",
@@ -307,8 +343,18 @@
         "    path.append((source_x,source_y))\n",
         "    return path"
       ],
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2lSvd6zaYDr7",
+        "colab_type": "text"
+      },
+      "source": [
+        "Se define una matriz de pixeles guardada por medio de la funcion de la libreria cv2.imread esta lee una imagen y la convierte en pixeles lo que usaremos como puntos con su peso en el algoritmo. Ademas se dibujan circulos en el inicio del maze y el final sea rojo y azul, se usa la funcion circel de la libreria cv2 que recibe de input el array de coordenadas de la imagen \"img\", se define el rgba. <br> Después se usa la libreria de matplotlib.pyplot (renombrada a plt), con la funcion figure se define el tamaño de la imagen y recibe de input la escala, ademas se usa imshow que muestra el array de coordenadas de la imagen leida \"img\", finalmente se despliga la imagen/figura con todas las adiciones."
+      ]
     },
     {
       "cell_type": "code",
@@ -319,7 +365,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 432
         },
-        "outputId": "7a77e123-b8c1-4cc0-8d89-9dab3be32887"
+        "outputId": "9370c509-4719-4725-a962-640e7ae85140"
       },
       "source": [
         "img = cv2.imread('maze.png') # read the image \n",
@@ -329,7 +375,7 @@
         "plt.imshow(img)  \n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "display_data",
@@ -347,6 +393,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wt0wE0ZOfkUV",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "rFkw5mTtO7J2",
@@ -355,7 +411,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 432
         },
-        "outputId": "16ef67b8-6c03-4529-ef39-60f0c069a9da"
+        "outputId": "2540c4f6-1b81-456a-96a0-9d27180e848c"
       },
       "source": [
         "img = cv2.imread('maze.png') # read image\n",
@@ -367,7 +423,7 @@
         "plt.imshow(img) # show the image on the screen \n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "display_data",
@@ -393,7 +449,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 432
         },
-        "outputId": "7a4ab47c-3115-4f4f-e42d-83b18443d5fa"
+        "outputId": "9ce18a15-a30c-40b7-eb53-f40c4867c59b"
       },
       "source": [
         "img = cv2.imread('maze5.jpg') # read the image \n",
@@ -403,7 +459,7 @@
         "plt.imshow(img)  \n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "display_data",
@@ -429,7 +485,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 432
         },
-        "outputId": "ae077778-8131-40ca-ec59-34c4757e8d22"
+        "outputId": "fca32462-704d-40af-f139-75415fb8d388"
       },
       "source": [
         "img = cv2.imread('maze5.jpg') # read image\n",
@@ -441,7 +497,7 @@
         "plt.imshow(img) # show the image on the screen \n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "display_data",
@@ -463,13 +519,34 @@
       "metadata": {
         "id": "LzghT0ItO7J_",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 232
+        },
+        "outputId": "ddb27ad8-cf36-4139-eaab-2e343bd0f6c6"
       },
       "source": [
-        ""
+        "img = cv2.imread('beeMaze.jpg') # read image\n",
+        "p = find_shortest_path(img, (300,300), (5,320))\n",
+        "drawPath(img,p)\n",
+        "plt.figure(figsize=(7,7))\n",
+        "plt.imshow(img) # show the image on the screen \n",
+        "plt.show()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "error",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-44-a76f304ad244>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mimg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'beeMaze.jpg'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# read image\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'maze-initial5.jpg'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfind_shortest_path\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m300\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m300\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m320\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mdrawPath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'maze-solution5.jpg'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31merror\u001b[0m: OpenCV(4.1.2) /io/opencv/modules/imgcodecs/src/loadsave.cpp:715: error: (-215:Assertion failed) !_img.empty() in function 'imwrite'\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
