--- a/Notebook_T4.ipynb
+++ b/Notebook_T4.ipynb
@@ -20,6 +20,11 @@
    "source": [
     "<a id ='general'></a>\n",
     "# Tabla de Contenidos - Módulo 2\n",
+    "#\n",
+    "<br>#Daniel Zubieta Ambriz A01651206 https://github.com/Dazuam/SistemasInteligentes\n",
+    "<br>#Carlos Aguirre Orozco A01336319 https://github.com/Lucer9/Sistemas-\n",
+    "<br>#Axel Octavio Meinguer Estrada A01653448 https://github.com/alupusmc/SistemasInteligentes\n",
+    "<br>#Alister Estrada Cueto A01336767 https://github.com/AlisterEstrada/SistemasInteligente\n",
     "---\n",
     "1. [Agentes Inteligentes](#Agentes)\n",
     "    * [Overview](#OVERVIEW)\n",
